[package]
name = "rustwasm"
version = "0.1.0"
authors = ["ningxiao <363305175@qq.com>"]
edition = "2018"
license = "Apache"
description = "rust生成wasm"
repository = "https://github.com/ningxiao/rustwasm.git"
[lib]
crate-type = ["cdylib", "rlib"]
[features]
default = ["console_error_panic_hook"]
[dependencies]
humantime = "2.1.0"
js-sys = "0.3.60"
serde_derive = "^1.0.147"
wasm-bindgen-futures = "0.4.33"
serde = { version = "1.0.147", features = ["derive"] }
wasm-bindgen = { version = "0.2.83", features = ["serde-serialize"] }
web-sys = { version = "0.3.60", features = [
    'console',
    'Document',
    'Element',
    'HtmlElement',
    'Node',
    'Window',
    'ImageData',
    'CanvasRenderingContext2d',
    'Performance',
    'PerformanceTiming',
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
] }
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }
[dev-dependencies]
wasm-bindgen-test = "0.3.33"

[profile.release]
# Tell `rustc` to optimize for small code size.
# lto = true
opt-level = "s"
